--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "url": "https://github.com/open-llm/open-llm-provider"
   },
   "activationEvents": [
-    "onStartupFinished"
+    "onStartupFinished",
+    "onView:openLLM.chatView"
   ],
   "main": "./out/extension.js",
   "contributes": {
@@ -43,6 +44,24 @@
         "displayName": "Open LLM Provider"
       }
     ],
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "open-llm-chat",
+          "title": "Open LLM",
+          "icon": "$(comment-discussion)"
+        }
+      ]
+    },
+    "views": {
+      "open-llm-chat": [
+        {
+          "type": "webview",
+          "id": "openLLM.chatView",
+          "name": "Chat"
+        }
+      ]
+    },
     "commands": [
       {
         "command": "openLLM.configure",
@@ -82,6 +101,16 @@
       {
         "command": "openLLM.showPlayground",
         "title": "Open Playground",
+        "category": "Open LLM"
+      },
+      {
+        "command": "openLLM.focusChat",
+        "title": "Focus Chat Panel",
+        "category": "Open LLM"
+      },
+      {
+        "command": "openLLM.clearChat",
+        "title": "Clear Chat History",
         "category": "Open LLM"
       }
     ],
